analogue Change Log

Version 0.7-0

	* timetrack: new function to passively project sediment core
	samples within an ordination of training or reference set
	samples. Both unconstrained and constrained ordinations are
	supported using the Vegan package. 'fitted' and 'plot' methods
	are available.

	* prcurve: new function to fit principal curves to sediment
	core samples. A 'plot' method is also provided.

	Several support functions are also provided; 'smoothSpline' is
	a wrapper to 'smooth.spline' for fitting splines to individual
	species in order to fit the principal curve. 'initCurve'
	implements several methods for initialising the principal curve.

	* Stratiplot: if 'zones' are supplied, a legend on the right-hand
	side of the diagram can be drawn by setting argument 'drawLegend'
	to TRUE (the default). Currently, only simple blocks that
	demarcate the zone boundaries are drawn and labelled using
	argument 'zoneNames'.

	First attempt to allow both relative (percentages or proportions)
	and absolute variables, or mixtures thereof, in a single plot. The
	user is free to specify which variables should be treated as relative
	or absolute, and variables marked as absolute will be drawn with
	fixed-width panels, the size of which can be controlled via argument
	'absoluteSize' (default is 0.5 * largest panel width). Consider
	this functionality unstable at the moment.

	* residLen: was not 'join'-ing the training set and passive data
	correctly and would fail if species were found in one but not the
	other data set.

	* tran: improvements to the underlying code.

	* distance: reslience to NA in "gower", "alt.gower", "mixed".

	* cma: added methods for 'mat' and 'predict.mat' objects. These
	allow you to retrieve the k-closest analogues for training set
	and prediction data respectively.

	* dissimilarities: new method for 'mat' objects.

	* datasets: package datasets have been resaved with optimal
	compression determined via resaveRdaFiles(). This has reduced