@@ -1,7 +1,7 @@
 ## initCurve: initialise the PC from one of several starting
 ## configurations
-initCurve <- function(X, method = c("ca","pca","random"),
-                      rank = FALSE, axis = 1) {
+initCurve <- function(X, method = c("ca","pca","random","user"),
+                      rank = FALSE, axis = 1, start) {
     ## X must be a matrix, attempt to coerce
     if(!isTRUE(all.equal(class(X), "matrix")))
         X <- data.matrix(X)
@@ -24,7 +24,9 @@ initCurve <- function(X, method = c("ca","pca","random"),
                                              scaling = 0))
               },
            random = {lambda <- sample.int(NROW(X))
-                 }
+                 },
+           user = {lambda <- start
+               }
            )
     dist <- sum(diag(var(X))) * (NROW(X) - 1)
     ## Ordering of obs. along PCur
