@@ -4,13 +4,24 @@
 ## in package pcurve is too complex for our needs
 
 ## prcurve (named after prcomp): fits a principal curve to matrix X
-prcurve <- function(X, method = c("ca","pca","random"),
+prcurve <- function(X,
+                    method = c("ca","pca","random","user"),
+                    start = NULL,
                     smoother = smoothSpline,
-                    complexity, vary = FALSE, maxComp,
+                    complexity,
+                    vary = FALSE,
+                    maxComp,
                     finalCV = FALSE,
-                    axis = 1, rank = FALSE, stretch = 2,
-                    maxit = 10, trace = FALSE, thresh = 0.001,
-                    plotit = FALSE, ...) {
+                    axis = 1,
+                    rank = FALSE,
+                    stretch = 2,
+                    maxit = 10,
+                    trace = FALSE,
+                    thresh = 0.001,
+                    plotit = FALSE,
+                    ## fitFUN = c("princurve","pcurve"),
+                    ## latent = FALSE,
+                    ...) {
     ## X should be a matrix, attempt to coerce
     if(!isTRUE(all.equal(class(X), "matrix")))
         X <- data.matrix(X)
@@ -19,13 +30,21 @@ prcurve <- function(X, method = c("ca","pca","random"),
         method <- "ca"
     else
         method <- match.arg(method)
+    ## ## set/select default fitting function
+    ## if(missing(fitFUN))
+    ##     fitFUN <- "princurve"
+    ## else
+    ##     fitFUN <- match.arg(fitFUN)
+    ## if(latent && fitFUN == "princurve")
+    ##     warning("Scaling PC to a latent variable not availble with fitFUN = \"princurve\".")
     ## data stats
     n <- NROW(X) ## number of observations
     m <- NCOL(X) ## number of variables
     ## starting configuration
     config <- startConfig <- initCurve(X, method = method,
                                        rank = rank,
-                                       axis = axis)
+                                       axis = axis,
+                                       start = start)
     ## Need to sort out auto DF choices after pcurve::pcurve
     ## Vary degrees of freedom per variable?
     if(missing(complexity)) {
@@ -46,12 +65,15 @@ prcurve <- function(X, method = c("ca","pca","random"),
     }
     if(missing(maxComp))
         maxComp <- 5 * log10(n)
-    ## fix-upreset complexity > maxComp to maxComp
+    ## fix-up/reset complexity > maxComp to maxComp
     complexity[complexity > maxComp] <- maxComp
     ##
     iter <- 0L
-    if(trace)
+    if(trace) {
+        writeLines(strwrap(tmp <- paste(rep("-", options("width")[[1]]),
+                                        collapse = "")))
         writeLines(sprintf("Initial curve: d.sq: %.4f", config$dist))
+    }
     ##dist.raw <- sum(diag(var(X))) * (NROW(X) - 1)
     dist.old <- sum(diag(var(X)))
     s <- matrix(NA, nrow = n, ncol = m)
@@ -65,8 +87,15 @@ prcurve <- function(X, method = c("ca","pca","random"),
                                       complexity = complexity[j],
                                       choose = FALSE, ...))
         }
+        ##
         dist.old <- config$dist
-        config <- get.lam(X, s = s, stretch = stretch)
+        ## if(fitFUN == "princurve") {
+            config <- get.lam(X, s = s, stretch = stretch)
+        ## } else {
+        ##     uni.lam <- sort(unique(config$lambda))
+        ##     config <- pcget.lam(X, s = s, latent = latent, stretch = stretch,
+        ##                         uni.lam = uni.lam)
+        ## }
         class(config) <- "prcurve"
         ## Converged?
         converged <- (abs((dist.old - config$dist)/dist.old) <=
@@ -103,10 +132,19 @@ prcurve <- function(X, method = c("ca","pca","random"),
             plot(config, X)
         }
         if (trace)
-            writeLines(sprintf(paste("Iteration %",
-                                     max(3, nchar(maxit)),
+            writeLines(sprintf(paste("Iteration %", max(3, nchar(maxit)),
                                      "s: d.sq: %.4f", sep = ""),
                                "CV", config$dist))
+    }
+    if(trace){
+        writeLines(strwrap(tmp))
+        if(converged) {
+            writeLines(strwrap(paste("PC Converged in", iter, "iterations.")))
+        } else {
+            writeLines(strwrap(paste("PC did not converge after", iter,
+                                     "iterations.")))
+        }
+        writeLines(strwrap(tmp))
     }
     names(config$tag) <- names(config$lambda) <-
         rownames(config$s) <- rownames(X)
@@ -115,6 +153,7 @@ prcurve <- function(X, method = c("ca","pca","random"),
     config$iter <- iter
     config$totalDist <- startConfig$dist
     config$complexity <- complexity
+    ## config$fitFUN <- fitFUN
     config$call <- match.call()
     class(config) <- c("prcurve")
     return(config)
